Added button generation via JS

--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 
 <body>
   <h1>Search Function Testing</h1>
-  <div class="contain">
-    <button id="Male" onclick="ddC('Male')">Male</button>
-    <button id="Female" onclick="ddC('Female')">Female</button>
-    <button id="Other" onclick="ddC('Other')">Other</button>
+  <div class="contain" id="r1">
+    <!--Row 1 - Genders-->
   </div>
-  <div class="contain">
-    <button onclick="output()">Output</button>
+  <div class="contain" id="r2">
+    <!--Row 2 - Submit button-->
   </div>
   <hr />
   <p id="output">Output here</p>
